# tarelka_bot

./: .env.example  .gitignore  Dockerfile.ai  Dockerfile.bot  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci-cd.yml
landing/: Dockerfile  docker-entrypoint.sh  nginx.conf
landing/public/: index.template.html  styles.css
migrations/: env.py
migrations/versions/: 001_initial.py  002_favorite_meals.py  003_daily_request_limit.py  004_favorite_entry_type.py
scripts/: deploy.sh
src/ai_analyzer/: analysis_runner.py  cursor_runner.py  env_utils.py  openai_runner.py  parsing.py  prompts.py  runner_factory.py  server.py
src/bot/: config.py  main.py  states.py
src/bot/handlers/: __init__.py  correction.py  daily.py  favorites.py  feedback.py  food.py  profile.py  start.py  statistics.py
src/bot/keyboards/: menus.py
src/bot/services/: ai_client.py  analysis_errors.py  charts.py  entry_service.py  formatting.py  links.py  message_cleanup.py  messaging.py  nutrition.py  request_limit.py
src/db/: models.py  repository.py  session.py  url.py
src/shared/: logging_config.py  schemas.py
tests/: test_ai_parsing.py  test_cursor_runner.py  test_daily_balance.py  test_env_utils.py  test_formatting.py  test_logging_config.py  test_message_cleanup.py  test_nutrition.py  test_openai_runner.py  test_request_limit.py  test_runner_factory.py  test_statistics.py
