[project]
name = "wellhealth"
version = "0.1.0"
description = "Telegram calorie tracking bot with Cursor CLI analysis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiogram==3.29.0",
    "alembic==1.18.4",
    "asyncpg==0.31.0",
    "fastapi==0.115.6",
    "httpx==0.28.1",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.1",
    "python-multipart==0.0.20",
    "openai==1.59.6",
    "sqlalchemy[asyncio]==2.0.36",
    "uvicorn[standard]==0.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
]

[build-system]
requires = ["setuptools>=75.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src", "src.*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
